// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiferayConfigurationOverview should render 1`] = `
<div
  className="configuration-overview-root"
>
  <Subtitle>
    Data Configuration
  </Subtitle>
  <ConfigurationItem
    buttonParams={
      Object {
        "display": "primary",
        "label": "Configure",
      }
    }
    configuration={null}
    description="Import and map out contacts from your Liferay DXP instance."
    href="/workspace/23/settings/data-source/test/liferay/contacts"
    key="0"
    label="Contacts"
    status="ACTIVE"
    title="Configure Contacts"
  />
  <ConfigurationItem
    buttonParams={
      Object {
        "display": "primary",
        "label": "Configure",
      }
    }
    configuration={null}
    description="Select your Liferay DXP Sites and their assets to start tracking user behavior data."
    href="/workspace/23/settings/data-source/test/liferay/analytics"
    key="1"
    label="Analytics"
    status="ACTIVE"
    title="Configure Analytics"
  />
</div>
`;

exports[`LiferayConfigurationOverview should render already configured items with the button text "edit" instead of "configure" 1`] = `
<div
  className="configuration-overview-root"
>
  <Subtitle>
    Data Configuration
  </Subtitle>
  <ConfigurationItem
    buttonParams={
      Object {
        "display": "secondary",
        "label": "Edit",
      }
    }
    configuration={
      Immutable.Map {
        "enableAllContacts": true,
      }
    }
    description="Import and map out contacts from your Liferay DXP instance."
    href="/workspace/23/settings/data-source/test/liferay/contacts"
    key="0"
    label="Contacts"
    status="ACTIVE"
    title="Configure Contacts"
  />
  <ConfigurationItem
    buttonParams={
      Object {
        "display": "secondary",
        "label": "Edit",
      }
    }
    configuration={
      Immutable.Map {
        "sites": Immutable.List [
          "1",
        ],
      }
    }
    description="Select your Liferay DXP Sites and their assets to start tracking user behavior data."
    href="/workspace/23/settings/data-source/test/liferay/analytics"
    key="1"
    label="Analytics"
    status="ACTIVE"
    title="Configure Analytics"
  />
</div>
`;

exports[`LiferayConfigurationOverview should render as disabled 1`] = `
<div
  className="configuration-overview-root"
>
  <Subtitle>
    Data Configuration
  </Subtitle>
  <ConfigurationItem
    buttonParams={
      Object {
        "display": "primary",
        "label": "Configure",
      }
    }
    configuration={null}
    description="Import and map out contacts from your Liferay DXP instance."
    disabled={true}
    href="/workspace/23/settings/data-source/test/liferay/contacts"
    key="0"
    label="Contacts"
    status="ACTIVE"
    title="Configure Contacts"
  />
  <ConfigurationItem
    buttonParams={
      Object {
        "display": "primary",
        "label": "Configure",
      }
    }
    configuration={null}
    description="Select your Liferay DXP Sites and their assets to start tracking user behavior data."
    disabled={true}
    href="/workspace/23/settings/data-source/test/liferay/analytics"
    key="1"
    label="Analytics"
    status="ACTIVE"
    title="Configure Analytics"
  />
</div>
`;

exports[`LiferayConfigurationOverview should render with contacts synced 1`] = `
<BaseConfigurationItem
  buttonParams={
    Object {
      "disabled": false,
      "display": "secondary",
      "href": "/workspace/23/settings/data-source/test/liferay/contacts",
      "label": "Edit",
    }
  }
  completion={1}
  description="Import and map out contacts from your Liferay DXP instance."
  showBar={false}
  statusMessage="Last Sync: 7/10/2018 - 11:01 PM GMT"
  title="Configure Contacts"
/>
`;
